--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1028,7 +1028,6 @@ payload:
   - '+.11h5.com'
   - '+.11job.com'
   - '+.11k.cc'
-  - '+.11kf.net'
   - '+.11lx.com'
   - '+.11pdf.com'
   - '+.11player.com'
@@ -1643,7 +1642,6 @@ payload:
   - '+.17rd.com'
   - '+.17rd.net'
   - '+.17read.com'
-  - '+.17sct.com'
   - '+.17shouhui.com'
   - '+.17sucai.com'
   - '+.17syi.com'
@@ -1820,6 +1818,7 @@ payload:
   - '+.198game.com'
   - '+.198game.net'
   - '+.198w.net'
+  - '+.1992mu.com'
   - '+.199508.com'
   - '+.1997sty.com'
   - '+.1998mall.com'
@@ -2617,7 +2616,6 @@ payload:
   - '+.30px.com'
   - '+.30tqyb.com'
   - '+.30w.net'
-  - '+.30xz.com'
   - '+.31.com'
   - '+.310game.com'
   - '+.310s-2520.com'
@@ -2648,7 +2646,6 @@ payload:
   - '+.315weishi.com'
   - '+.315z.net'
   - '+.315zw.com'
-  - '+.315zww.com'
   - '+.31609.com'
   - '+.317608.com'
   - '+.317hu.com'
@@ -3332,7 +3329,6 @@ payload:
   - '+.3g2win.com'
   - '+.3g3h.org'
   - '+.3g567.com'
-  - '+.3g899.net'
   - '+.3gcomet.com'
   - '+.3gdisk.com'
   - '+.3glasses.com'
@@ -4656,7 +4652,6 @@ payload:
   - '+.52xitong.com'
   - '+.52xiuxian.com'
   - '+.52xiyou.com'
-  - '+.52xtxs.com'
   - '+.52xyz.com'
   - '+.52yawa.com'
   - '+.52yesu.com'
@@ -4718,7 +4713,6 @@ payload:
   - '+.53xjd.com'
   - '+.53yao.com'
   - '+.53yu.com'
-  - '+.53zw.net'
   - '+.54.com'
   - '+.54114.com'
   - '+.542i.com'
@@ -5120,6 +5114,7 @@ payload:
   - '+.5ichong.com'
   - '+.5icomment.com'
   - '+.5icool.com'
+  - '+.5icrack.com'
   - '+.5idc.com'
   - '+.5idev.com'
   - '+.5idhl.com'
@@ -5987,7 +5982,6 @@ payload:
   - '+.7ho.com'
   - '+.7hon.com'
   - '+.7huang.org'
-  - '+.7hxsxs.com'
   - '+.7i2.com'
   - '+.7iaoshou.com'
   - '+.7icp.com'
@@ -6166,7 +6160,6 @@ payload:
   - '+.810251.com'
   - '+.8108188.com'
   - '+.810840.com'
-  - '+.811xs.com'
   - '+.812361.com'
   - '+.81265.net'
   - '+.81312.com'
@@ -7065,7 +7058,6 @@ payload:
   - '+.9718game.com'
   - '+.9724.com'
   - '+.973.com'
-  - '+.973xs.com'
   - '+.97616.net'
   - '+.97775.com'
   - '+.977pk.com'
@@ -9321,6 +9313,7 @@ payload:
   - '+.armystar.com'
   - '+.arnaz-on-co-jp.icu'
   - '+.arocmag.com'
+  - '+.arongsoft.com'
   - '+.arp.cc'
   - '+.arpg2.com'
   - '+.arpun.com'
@@ -9692,7 +9685,6 @@ payload:
   - '+.axure.us'
   - '+.axureshop.com'
   - '+.axureux.com'
-  - '+.axxiaoshuo.com'
   - '+.axyahaxn.tokyo'
   - '+.axyxt.com'
   - '+.axzchou.com'
@@ -12323,12 +12315,9 @@ payload:
   - '+.bxsychina.com'
   - '+.bxwst.com'
   - '+.bxwx.la'
-  - '+.bxwx.org'
   - '+.bxwx.tv'
   - '+.bxwx.us'
-  - '+.bxwx11.com'
   - '+.bxwx520.com'
-  - '+.bxwx99.com'
   - '+.bxwxorg.com'
   - '+.bxxy.com'
   - '+.bxyuer.com'
@@ -12450,7 +12439,6 @@ payload:
   - '+.bzkad.com'
   - '+.bzko.com'
   - '+.bzmfxz.com'
-  - '+.bzmss.com'
   - '+.bzname.com'
   - '+.bznx.net'
   - '+.bzonl.com'
@@ -13268,7 +13256,6 @@ payload:
   - '+.cdmm.net'
   - '+.cdmoz.org'
   - '+.cdn-cdn.net'
-  - '+.cdn-data-cloud.com'
   - '+.cdn-dodo.com'
   - '+.cdn-files.net'
   - '+.cdn-hotels.com'
@@ -14384,6 +14371,7 @@ payload:
   - '+.chinadengshi.com'
   - '+.chinadentalshow.com'
   - '+.chinadep.com'
+  - '+.chinadforce.com'
   - '+.chinadigit.org'
   - '+.chinadmoz.org'
   - '+.chinadns.org'
@@ -16148,7 +16136,6 @@ payload:
   - '+.cnsuning.com'
   - '+.cnsunp.com'
   - '+.cnsuv.com'
-  - '+.cnsyhz.com'
   - '+.cnsynews.com'
   - '+.cnsyyx.com'
   - '+.cntagore.com'
@@ -16256,7 +16243,6 @@ payload:
   - '+.coantec.com'
   - '+.coaoo.com'
   - '+.coatingol.com'
-  - '+.cobbersz.com'
   - '+.cobenet.com'
   - '+.cobkl.com'
   - '+.cocas.cc'
@@ -17526,7 +17512,6 @@ payload:
   - '+.d3tt.com'
   - '+.d3zone.com'
   - '+.d4000.com'
-  - '+.d586.com'
   - '+.d5h.net'
   - '+.d5power.com'
   - '+.d5wx.com'
@@ -18761,7 +18746,6 @@ payload:
   - '+.dierkezhan.com'
   - '+.diershoubing.com'
   - '+.dietfd.com'
-  - '+.diexia.com'
   - '+.difanapp.com'
   - '+.difangfengsu.com'
   - '+.digcredit.com'
@@ -19410,6 +19394,7 @@ payload:
   - '+.dormforce.net'
   - '+.dorrr.com'
   - '+.dortail.com'
+  - '+.doseeing.com'
   - '+.doserv.com'
   - '+.doshome.com'
   - '+.dosnap.com'
@@ -19937,7 +19922,6 @@ payload:
   - '+.dustess.com'
   - '+.dustit.me'
   - '+.dusulang.com'
-  - '+.dusuu.com'
   - '+.dute.me'
   - '+.dutenews.com'
   - '+.dutils.com'
@@ -20053,6 +20037,7 @@ payload:
   - '+.dycars.com'
   - '+.dycdn.com'
   - '+.dycf.net'
+  - '+.dydab.com'
   - '+.dydata.io'
   - '+.dydt.net'
   - '+.dydytt.com'
@@ -22073,7 +22058,6 @@ payload:
   - '+.fearlazy.com'
   - '+.feaye.com'
   - '+.fecable-gz.com'
-  - '+.fecmall.com'
   - '+.fecn.net'
   - '+.fecshop.com'
   - '+.fedte.cc'
@@ -22492,7 +22476,6 @@ payload:
   - '+.firstlinkapp.com'
   - '+.firstp2p.com'
   - '+.firstproduction.net'
-  - '+.firstrow-sports.com'
   - '+.firstsolver.com'
   - '+.fish2bird.com'
   - '+.fish3000.com'
@@ -23489,6 +23472,7 @@ payload:
   - '+.gamett.net'
   - '+.gametu.net'
   - '+.gamevvip.com'
+  - '+.gameweibo.com'
   - '+.gamewifi.net'
   - '+.gamexdd.com'
   - '+.gamexhb.com'
@@ -24966,11 +24950,9 @@ payload:
   - '+.guanliyun.com'
   - '+.guanmeikj.com'
   - '+.guannews.com'
-  - '+.guannin.com'
   - '+.guanplus.com'
   - '+.guanqifeier.com'
   - '+.guanrenjiaoyu.com'
-  - '+.guanshangsq.com'
   - '+.guanshangyu.cc'
   - '+.guanshi.net'
   - '+.guanshuzw.com'
@@ -25008,7 +24990,6 @@ payload:
   - '+.guduodata.com'
   - '+.guer.org'
   - '+.guestops.com'
-  - '+.gufengge.org'
   - '+.gufengmh.com'
   - '+.gufengmh8.com'
   - '+.gufengmh9.com'
@@ -25248,7 +25229,6 @@ payload:
   - '+.gxdahua.com'
   - '+.gxdianhua.com'
   - '+.gxdmw.com'
-  - '+.gxehiil.bar'
   - '+.gxeqx.com'
   - '+.gxfdcw.com'
   - '+.gxfeifan123.com'
@@ -25340,7 +25320,6 @@ payload:
   - '+.gyyqcloud.com'
   - '+.gyzfbz.net'
   - '+.gyzy.com'
-  - '+.gyzyfw.com'
   - '+.gz-cmc.com'
   - '+.gz-cube.com'
   - '+.gz-data.com'
@@ -26685,7 +26664,6 @@ payload:
   - '+.heijiazi.com'
   - '+.heijin.org'
   - '+.heijingjihua.com'
-  - '+.heikexs.com'
   - '+.heilanhome.com'
   - '+.heilaot.com'
   - '+.heilei.com'
@@ -27032,7 +27010,6 @@ payload:
   - '+.hhgslb.com'
   - '+.hhh233.net'
   - '+.hhh885.com'
-  - '+.hhhai.com'
   - '+.hhhoo.com'
   - '+.hhhstz.com'
   - '+.hhhtnews.com'
@@ -28223,7 +28200,6 @@ payload:
   - '+.huangh.com'
   - '+.huanghaicollege.com'
   - '+.huanghanlian.com'
-  - '+.huanghecaifu.com'
   - '+.huanghepiao.com'
   - '+.huanghouyz.com'
   - '+.huangjiemin.com'
@@ -28239,7 +28215,6 @@ payload:
   - '+.huangwei.me'
   - '+.huangwei.pro'
   - '+.huangxinwei.com'
-  - '+.huangxubo.me'
   - '+.huangye88.com'
   - '+.huangye88.net'
   - '+.huangyixiaoshuo.com'
@@ -28857,6 +28832,7 @@ payload:
   - '+.hwxjp.com'
   - '+.hwxnet.com'
   - '+.hwxuanliuqi.com'
+  - '+.hwyxxx.com'
   - '+.hwzyjt.com'
   - '+.hx008.net'
   - '+.hx110.com'
@@ -28903,7 +28879,6 @@ payload:
   - '+.hxqc.com'
   - '+.hxqcjt.com'
   - '+.hxqnj.org'
-  - '+.hxqwx.com'
   - '+.hxrc.com'
   - '+.hxs168.com'
   - '+.hxsd.com'
@@ -31066,6 +31041,7 @@ payload:
   - '+.iuoooo.com'
   - '+.iuplus.com'
   - '+.iuynfg.com'
+  - '+.iv06.com'
   - '+.ivali.com'
   - '+.ivan.xin'
   - '+.ivcheng.com'
@@ -31150,7 +31126,6 @@ payload:
   - '+.ixiaolu.com'
   - '+.ixiaowai.com'
   - '+.ixiatxt.com'
-  - '+.ixibeiren.com'
   - '+.ixieme.com'
   - '+.ixigua.com'
   - '+.ixiguan.com'
@@ -32561,7 +32536,6 @@ payload:
   - '+.jjcdn.com'
   - '+.jjcoffetel.cc'
   - '+.jjcoffetels.com'
-  - '+.jjcpchina.com'
   - '+.jjcto.com'
   - '+.jjdc.net'
   - '+.jjdede.com'
@@ -32779,6 +32753,7 @@ payload:
   - '+.jnzhonglidjc.com'
   - '+.jnzixun.com'
   - '+.jnzycw.com'
+  - '+.jo43.com'
   - '+.joaquinchou.com'
   - '+.job0768.com'
   - '+.job10000.com'
@@ -33244,7 +33219,6 @@ payload:
   - '+.juemuren4449.com'
   - '+.jueok.com'
   - '+.juesheng.com'
-  - '+.jueshitangmen.info'
   - '+.juewei.com'
   - '+.juexiang.com'
   - '+.jufaanli.com'
@@ -33480,7 +33454,6 @@ payload:
   - '+.jwetech.com'
   - '+.jwfun.com'
   - '+.jwipc.com'
-  - '+.jwks123.com'
   - '+.jwl100.com'
   - '+.jwnote.com'
   - '+.jwshy.com'
@@ -34298,7 +34271,6 @@ payload:
   - '+.kikitamap.com'
   - '+.kikoplay.fun'
   - '+.kiku.vip'
-  - '+.kikyoar.com'
   - '+.kililife.com'
   - '+.killdb.com'
   - '+.kilvn.com'
@@ -35457,6 +35429,7 @@ payload:
   - '+.lanzouf.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
+  - '+.lanzouj.com'
   - '+.lanzoum.com'
   - '+.lanzoup.com'
   - '+.lanzouq.com'
@@ -36027,7 +36000,6 @@ payload:
   - '+.leyungame.com'
   - '+.leyunge.com'
   - '+.leyuz.com'
-  - '+.leyvo.com'
   - '+.lezai.com'
   - '+.lezhi.com'
   - '+.lezhi99.com'
@@ -38222,7 +38194,6 @@ payload:
   - '+.mantusy.com'
   - '+.manwuxian123.com'
   - '+.manxiu-law.com'
-  - '+.manyanu.com'
   - '+.manyjs.com'
   - '+.manylaw.com'
   - '+.manyoo.net'
@@ -38676,7 +38647,6 @@ payload:
   - '+.meilvtong.com'
   - '+.meimeidu.com'
   - '+.meimeio.com'
-  - '+.meimi.cc'
   - '+.meimingteng.com'
   - '+.meingrace.com'
   - '+.meinv.com'
@@ -38696,7 +38666,6 @@ payload:
   - '+.meiquankejih.com'
   - '+.meirenshang.com'
   - '+.meiridazhe.com'
-  - '+.meirids.com'
   - '+.meirishentie.com'
   - '+.meiritv.net'
   - '+.meiriyiwen.com'
@@ -39272,7 +39241,6 @@ payload:
   - '+.mingyuanfund.com'
   - '+.mingyuanyun.com'
   - '+.mingyueqingfengshe.com'
-  - '+.mingyuezw.com'
   - '+.mingzhuxiaoshuo.com'
   - '+.mingzihui.com'
   - '+.mingzw.net'
@@ -40555,7 +40523,6 @@ payload:
   - '+.naichabiao.com'
   - '+.naifei.pro'
   - '+.naigirl.com'
-  - '+.naikanxs.com'
   - '+.naikili.life'
   - '+.naimei.com'
   - '+.nainiuapp.com'
@@ -43048,7 +43015,6 @@ payload:
   - '+.phpernote.com'
   - '+.phperxuqin.com'
   - '+.phperz.com'
-  - '+.phpfans.net'
   - '+.phpfdc.com'
   - '+.phpfs.com'
   - '+.phpha.com'
@@ -43927,6 +43893,7 @@ payload:
   - '+.pxtx.com'
   - '+.pxx.io'
   - '+.py-axa.com'
+  - '+.py1080p.com'
   - '+.py1314.com'
   - '+.py168.com'
   - '+.py3study.com'
@@ -44567,7 +44534,6 @@ payload:
   - '+.qingdaonews.com'
   - '+.qingdaoren.com'
   - '+.qingdaoticai.com'
-  - '+.qingdou.net'
   - '+.qingfanqie.com'
   - '+.qingflow.com'
   - '+.qingfo.com'
@@ -45577,7 +45543,6 @@ payload:
   - '+.r2g.net'
   - '+.r2yx.com'
   - '+.r337iz6.com'
-  - '+.r369.com'
   - '+.r51.net'
   - '+.r5k.com'
   - '+.r5tao.com'
@@ -45858,7 +45823,6 @@ payload:
   - '+.remark.dance'
   - '+.remax-bj.com'
   - '+.rememtek.com'
-  - '+.remen88.com'
   - '+.remoteaps.com'
   - '+.remotedu.com'
   - '+.renaren.com'
@@ -46293,7 +46257,6 @@ payload:
   - '+.rrppt.com'
   - '+.rrr.me'
   - '+.rrrdai.com'
-  - '+.rrrhteam.com'
   - '+.rrrmj.com'
   - '+.rrrrdaimao.com'
   - '+.rrs.com'
@@ -46439,7 +46402,6 @@ payload:
   - '+.runhuayou.biz'
   - '+.runidc.com'
   - '+.runjf.com'
-  - '+.runker.net'
   - '+.runker.online'
   - '+.runmang.com'
   - '+.runnar.com'
@@ -48384,7 +48346,6 @@ payload:
   - '+.shuge9.com'
   - '+.shugoo.com'
   - '+.shuguanghuayuan.com'
-  - '+.shuguanxs.com'
   - '+.shuhai.com'
   - '+.shuhaidata.com'
   - '+.shuhaisc.com'
@@ -48493,7 +48454,6 @@ payload:
   - '+.shuomingshuku.com'
   - '+.shuosanguo.com'
   - '+.shuosc.org'
-  - '+.shuoshuo4.com'
   - '+.shuoshuo9.com'
   - '+.shuoshuokong.com'
   - '+.shuoshuokong.org'
@@ -49112,7 +49072,6 @@ payload:
   - '+.sljkj.com'
   - '+.sljypt.com'
   - '+.slkj.org'
-  - '+.slksy.com'
   - '+.sllai.com'
   - '+.slmbio.com'
   - '+.slogra.com'
@@ -49174,7 +49133,6 @@ payload:
   - '+.smartpigai.com'
   - '+.smartproxy.me'
   - '+.smartqian.com'
-  - '+.smarts.online'
   - '+.smartsenstech.com'
   - '+.smartsteps.com'
   - '+.smartstudy.com'
@@ -49236,7 +49194,6 @@ payload:
   - '+.smsx.org'
   - '+.smsyun.cc'
   - '+.smt-dip.com'
-  - '+.smt-job.com'
   - '+.smtcdns.com'
   - '+.smtcdns.net'
   - '+.smtchinamag.com'
@@ -49668,7 +49625,6 @@ payload:
   - '+.soweather.com'
   - '+.sowin.com'
   - '+.sowu.com'
-  - '+.soxscc.info'
   - '+.soxsok.com'
   - '+.soxuxu.com'
   - '+.soyim.com'
@@ -49759,7 +49715,6 @@ payload:
   - '+.spplnet.com'
   - '+.sppmc.com'
   - '+.spprec.com'
-  - '+.spps.cc'
   - '+.spr-atm.com'
   - '+.sprayv.com'
   - '+.spreton.com'
@@ -49941,6 +49896,7 @@ payload:
   - '+.starpainters.net'
   - '+.starparkshenzhen.com'
   - '+.starpiao.com'
+  - '+.starrockinvest.com'
   - '+.starrtc.com'
   - '+.starrysurvey.com'
   - '+.starschina.com'
@@ -51275,7 +51231,6 @@ payload:
   - '+.taohhui.com'
   - '+.taohua.com'
   - '+.taohuaan.net'
-  - '+.taohuadao3.com'
   - '+.taohuazu.net'
   - '+.taohuazu.pw'
   - '+.taohui.pub'
@@ -51924,7 +51879,6 @@ payload:
   - '+.tianjingrong.com'
   - '+.tianjinshunma.com'
   - '+.tianjinwe.com'
-  - '+.tianjinxs.com'
   - '+.tiankong.com'
   - '+.tiankong.info'
   - '+.tiankonguse.com'
@@ -52866,7 +52820,6 @@ payload:
   - '+.ts-cooling.com'
   - '+.ts-juheng.com'
   - '+.ts100.com'
-  - '+.ts108.com'
   - '+.ts166.net'
   - '+.ts16949px.com'
   - '+.ts16949rz.org'
@@ -52905,8 +52858,6 @@ payload:
   - '+.tslongtai.com'
   - '+.tslsmart.com'
   - '+.tsmtkj.com'
-  - '+.tsmxs.com'
-  - '+.tsoo.me'
   - '+.tsov.net'
   - '+.tsp189.com'
   - '+.tspsy.com'
@@ -54533,7 +54484,6 @@ payload:
   - '+.vijos.org'
   - '+.vikduo.com'
   - '+.vikecn.com'
-  - '+.vikeninvest.com'
   - '+.villaday.com'
   - '+.villafrancescatti.com'
   - '+.viltd.com'
@@ -55220,7 +55170,6 @@ payload:
   - '+.wangtingrui.com'
   - '+.wangtongtong.com'
   - '+.wangtu.com'
-  - '+.wangtuizhijia.com'
   - '+.wanguan.com'
   - '+.wangukcn.com'
   - '+.wanguoschool.net'
@@ -57372,6 +57321,7 @@ payload:
   - '+.wujiexueyuan.com'
   - '+.wujiit.com'
   - '+.wujinimg.com'
+  - '+.wujinjixie.net'
   - '+.wujixiaoshuo.com'
   - '+.wukong.com'
   - '+.wukong.la'
@@ -58546,6 +58496,7 @@ payload:
   - '+.xiaopena.com'
   - '+.xiaopeng.com'
   - '+.xiaophy.com'
+  - '+.xiaopi.com'
   - '+.xiaopinw.com'
   - '+.xiaopiu.com'
   - '+.xiaoqiandao.com'
@@ -58675,7 +58626,6 @@ payload:
   - '+.xiaozhewz.com'
   - '+.xiaozhibaoxian.com'
   - '+.xiaozhibo.com'
-  - '+.xiaozhishi.net'
   - '+.xiaozhiyun.com'
   - '+.xiaozhu.com'
   - '+.xiaozhu2.com'
@@ -58807,6 +58757,7 @@ payload:
   - '+.xiji.com'
   - '+.xijiangtv.com'
   - '+.xijing01.com'
+  - '+.xiju.cc'
   - '+.xijucn.com'
   - '+.xikan.tv'
   - '+.xikii.com'
@@ -58846,7 +58797,6 @@ payload:
   - '+.xinbaopos.com'
   - '+.xinbear.com'
   - '+.xinbqg.com'
-  - '+.xinbxwx.com'
   - '+.xincache.com'
   - '+.xincai.com'
   - '+.xincaiguan.com'
@@ -59059,8 +59009,6 @@ payload:
   - '+.xinqiannv.com'
   - '+.xinqigu.com'
   - '+.xinqing.com'
-  - '+.xinqingdou.cc'
-  - '+.xinqingdou.com'
   - '+.xinqiyejia.com'
   - '+.xinqiys.com'
   - '+.xinqtech.com'
@@ -60165,6 +60113,7 @@ payload:
   - '+.xxzdpf.com'
   - '+.xxzfgjj.com'
   - '+.xxzhushou.com'
+  - '+.xxzsgame.com'
   - '+.xy-365.com'
   - '+.xy-asia.com'
   - '+.xy.com'
@@ -60175,6 +60124,7 @@ payload:
   - '+.xy3000.com'
   - '+.xy48.net'
   - '+.xy58.net'
+  - '+.xy599.com'
   - '+.xy78.com'
   - '+.xy980.net'
   - '+.xyb100.com'
@@ -60750,6 +60700,7 @@ payload:
   - '+.yealink.com'
   - '+.yealinkvc.com'
   - '+.yeapcloud.com'
+  - '+.yeapcloud.net'
   - '+.yearnfar.com'
   - '+.yeastar.com'
   - '+.yebaike.com'
@@ -61249,6 +61200,7 @@ payload:
   - '+.yingmile.com'
   - '+.yingming.net'
   - '+.yingmoo.com'
+  - '+.yingshe.com'
   - '+.yingsheng.com'
   - '+.yingshengyl.com'
   - '+.yingshiborui.com'
@@ -61507,7 +61459,6 @@ payload:
   - '+.yiyebang.com'
   - '+.yiyefei.com'
   - '+.yiyesheng.net'
-  - '+.yiyewenxs.com'
   - '+.yiyiarts.com'
   - '+.yiyiarts.net'
   - '+.yiyihd.com'
@@ -61532,7 +61483,6 @@ payload:
   - '+.yiyum.com'
   - '+.yiyunweb.com'
   - '+.yiyurumen.com'
-  - '+.yiyuzw.com'
   - '+.yizaoyiwan.com'
   - '+.yizeijun.com'
   - '+.yizenb.com'
@@ -61728,7 +61678,6 @@ payload:
   - '+.yn58.com'
   - '+.ynairport.com'
   - '+.ynb2dca.com'
-  - '+.ynbike.net'
   - '+.ynbojie.com'
   - '+.yncuc.net'
   - '+.yncunguan.com'
@@ -61947,7 +61896,6 @@ payload:
   - '+.youedata.com'
   - '+.youeryun.com'
   - '+.youez.com'
-  - '+.youfangw.com'
   - '+.youfangzx.com'
   - '+.youfen666.com'
   - '+.youfh.com'
@@ -62001,7 +61949,6 @@ payload:
   - '+.youkudou.com'
   - '+.youkudown.com'
   - '+.youlanw.com'
-  - '+.youle360.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
   - '+.youlinyouke.com'
@@ -62030,7 +61977,6 @@ payload:
   - '+.youmobi.com'
   - '+.youmodou.com'
   - '+.youmooyouyoung.com'
-  - '+.youmuyouxs.com'
   - '+.youneng.com'
   - '+.younet.com'
   - '+.younfor.com'
@@ -62804,6 +62750,7 @@ payload:
   - '+.yunlie.net'
   - '+.yunlietou.com'
   - '+.yunliketech.com'
+  - '+.yunliunet.com'
   - '+.yunmai.com'
   - '+.yunmayi.com'
   - '+.yunmd.net'
@@ -63392,7 +63339,6 @@ payload:
   - '+.zb580.tv'
   - '+.zb7.com'
   - '+.zb8.com'
-  - '+.zbai.net'
   - '+.zbbar.net'
   - '+.zbfilm.com'
   - '+.zbfjsj.com'
@@ -65200,6 +65146,7 @@ payload:
   - '+.zkyxls.com'
   - '+.zkzhkj.com'
   - '+.zkzj.org'
+  - '+.zl168.xyz'
   - '+.zl99.org'
   - '+.zlbaba.com'
   - '+.zlca.org'
@@ -65748,7 +65695,6 @@ payload:
   - '+.zupuk.com'
   - '+.zupulu.com'
   - '+.zutianke.com'
-  - '+.zutiyu.com'
   - '+.zuulee.com'
   - '+.zuxcgames.com'
   - '+.zuyunfei.com'
