--- a/directbak.yaml
+++ b/directbak.yaml
@@ -11,7 +11,6 @@ payload:
   - '+.000714.xyz'
   - '+.000dn.com'
   - '+.000e.com'
-  - '+.000wx.com'
   - '+.001.com'
   - '+.001133.app'
   - '+.0012482.com'
@@ -47,7 +46,6 @@ payload:
   - '+.0082tv.com'
   - '+.0082tv.net'
   - '+.008321.com'
-  - '+.00852wm.com'
   - '+.00853.la'
   - '+.0086crane.com'
   - '+.0086l.com'
@@ -1708,6 +1706,7 @@ payload:
   - '+.181230.com'
   - '+.18183.com'
   - '+.181839.com'
+  - '+.18183g.com'
   - '+.1818hm.com'
   - '+.181ps.com'
   - '+.181ue.com'
@@ -1776,7 +1775,6 @@ payload:
   - '+.18touch.com'
   - '+.18vps.com'
   - '+.18wk.com'
-  - '+.18xs.org'
   - '+.18yangzhi.com'
   - '+.18yl.com'
   - '+.18zhuanqian.com'
@@ -2599,8 +2597,6 @@ payload:
   - '+.301nn.com'
   - '+.301tz.cc'
   - '+.301zhuanfa.com'
-  - '+.30200t.com'
-  - '+.30200x.com'
   - '+.3023.com'
   - '+.3033c.com'
   - '+.306t.com'
@@ -2994,7 +2990,6 @@ payload:
   - '+.360webcache.com'
   - '+.360weizhan.com'
   - '+.360wscdn.com'
-  - '+.360wxw.com'
   - '+.360wyw.com'
   - '+.360wzb.com'
   - '+.360wzws.com'
@@ -4692,7 +4687,6 @@ payload:
   - '+.5366.com'
   - '+.53666.org'
   - '+.5367.com'
-  - '+.536wx.com'
   - '+.537.com'
   - '+.5379yx.com'
   - '+.537a.com'
@@ -6234,7 +6228,6 @@ payload:
   - '+.83edu.net'
   - '+.83h87d.com'
   - '+.83jie.com'
-  - '+.83om.com'
   - '+.84.vc'
   - '+.8421.com'
   - '+.84399.com'
@@ -7172,6 +7165,7 @@ payload:
   - '+.999wx.com'
   - '+.999xy.net'
   - '+.99aiji.net'
+  - '+.99aly.com'
   - '+.99bdf.com'
   - '+.99biaozhun.com'
   - '+.99bill.com'
@@ -10445,6 +10439,7 @@ payload:
   - '+.bcmeng.com'
   - '+.bcoderss.com'
   - '+.bcpcn.com'
+  - '+.bcpgame.com'
   - '+.bcrealm.com'
   - '+.bcreat.com'
   - '+.bcrjl.com'
@@ -10551,6 +10546,7 @@ payload:
   - '+.beebeeto.com'
   - '+.beecook.com'
   - '+.beedancing.com'
+  - '+.beejoygames.com'
   - '+.beejson.com'
   - '+.beekka.com'
   - '+.beelink.com'
@@ -10862,6 +10858,7 @@ payload:
   - '+.bhrencai.com'
   - '+.bhuitong.com'
   - '+.bhxww.com'
+  - '+.bhzck.xyz'
   - '+.bhzhu203.com'
   - '+.bhzhuji.com'
   - '+.bhzpw.com'
@@ -11049,7 +11046,6 @@ payload:
   - '+.billwang.net'
   - '+.bilnn.com'
   - '+.bim-times.com'
-  - '+.bim99.org'
   - '+.bimcn.org'
   - '+.bimo.cc'
   - '+.binaryai.net'
@@ -11272,7 +11268,6 @@ payload:
   - '+.bizhi88.com'
   - '+.bizhicool.com'
   - '+.bizhidaquan.com'
-  - '+.bizhimi.com'
   - '+.bizhiquan.com'
   - '+.bizhitupian.com'
   - '+.bizhizj.com'
@@ -12318,7 +12313,6 @@ payload:
   - '+.bxwx.tv'
   - '+.bxwx.us'
   - '+.bxwx520.com'
-  - '+.bxwxorg.com'
   - '+.bxxy.com'
   - '+.bxyuer.com'
   - '+.bxzhiku.com'
@@ -12816,6 +12810,7 @@ payload:
   - '+.careuc.com'
   - '+.cargeer.com'
   - '+.cargo001.com'
+  - '+.cargosmart.com'
   - '+.carimg.com'
   - '+.carking001.com'
   - '+.carlseb.xyz'
@@ -13763,6 +13758,7 @@ payload:
   - '+.changyan.com'
   - '+.changyifan.com'
   - '+.changyin-lab.com'
+  - '+.changyonggame.com'
   - '+.changyou.com'
   - '+.changyoyo.com'
   - '+.changyueba.com'
@@ -13974,6 +13970,7 @@ payload:
   - '+.chenggongguiji.com'
   - '+.chenggua.com'
   - '+.chengguw.com'
+  - '+.chengji1859.com'
   - '+.chengjieos.com'
   - '+.chengjing.com'
   - '+.chengkao365.com'
@@ -14954,7 +14951,6 @@ payload:
   - '+.chrieschina.com'
   - '+.chris-tina.com'
   - '+.chrmn.com'
-  - '+.chrom-china.com'
   - '+.chromecj.com'
   - '+.chromedownloads.net'
   - '+.chromefor.com'
@@ -15061,7 +15057,6 @@ payload:
   - '+.chujuan.net'
   - '+.chukong-inc.com'
   - '+.chukou1.com'
-  - '+.chukuangren.com'
   - '+.chule.cc'
   - '+.chulouwang.com'
   - '+.chumacdn.com'
@@ -16244,7 +16239,6 @@ payload:
   - '+.coaoo.com'
   - '+.coatingol.com'
   - '+.cobenet.com'
-  - '+.cobkl.com'
   - '+.cocas.cc'
   - '+.cocblo.com'
   - '+.cocccc.vip'
@@ -17302,7 +17296,6 @@ payload:
   - '+.cxxjs.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
-  - '+.cxyd.net'
   - '+.cxyfjy.com'
   - '+.cxyl.org'
   - '+.cxylfc.com'
@@ -19738,7 +19731,6 @@ payload:
   - '+.du7.com'
   - '+.du7.org'
   - '+.du8.com'
-  - '+.duai.com'
   - '+.dualaid.com'
   - '+.duan.red'
   - '+.duanjn.com'
@@ -19779,6 +19771,7 @@ payload:
   - '+.dui.ai'
   - '+.dui1dui.com'
   - '+.dui88.com'
+  - '+.dui9999.com'
   - '+.duia.com'
   - '+.duiai.com'
   - '+.duianba.com'
@@ -19813,6 +19806,7 @@ payload:
   - '+.dunjiaodu.com'
   - '+.dunkhome.com'
   - '+.dunlve.com'
+  - '+.dunwang.com'
   - '+.duobaoqibin.com'
   - '+.duobei.com'
   - '+.duobeiyun.com'
@@ -19941,7 +19935,6 @@ payload:
   - '+.duxiu.com'
   - '+.duyandb.com'
   - '+.duyao001.com'
-  - '+.duyidu.com'
   - '+.duyixing.com'
   - '+.duzelong.com'
   - '+.duzhe.com'
@@ -22091,7 +22084,6 @@ payload:
   - '+.feibisi.org'
   - '+.feibit.com'
   - '+.feibo.com'
-  - '+.feichangzhuan.com'
   - '+.feicool.com'
   - '+.feicui168.com'
   - '+.feicuiwuyu.com'
@@ -23489,6 +23481,7 @@ payload:
   - '+.ganglonggou.com'
   - '+.gangpaibao.com'
   - '+.gangqinpu.com'
+  - '+.gangqinxiansheng.com'
   - '+.gangzai.online'
   - '+.ganhuoche.com'
   - '+.ganhuodaquan.com'
@@ -23645,7 +23638,6 @@ payload:
   - '+.gbofd.com'
   - '+.gboooo.com'
   - '+.gbpjam.com'
-  - '+.gbsou.com'
   - '+.gbt88.com'
   - '+.gbtags.com'
   - '+.gbtranswins.com'
@@ -24940,6 +24932,7 @@ payload:
   - '+.guangzhitui.com'
   - '+.guangzhou-logistics.com'
   - '+.guangzhou-marathon.com'
+  - '+.guangzhouyibo.com'
   - '+.guanhuaju.com'
   - '+.guanjiabo.net'
   - '+.guanjiajf.com'
@@ -24955,7 +24948,6 @@ payload:
   - '+.guanrenjiaoyu.com'
   - '+.guanshangyu.cc'
   - '+.guanshi.net'
-  - '+.guanshuzw.com'
   - '+.guanting.com'
   - '+.guanvip8.com'
   - '+.guanwang.com'
@@ -25897,6 +25889,7 @@ payload:
   - '+.hanyanseed.com'
   - '+.hanyi.studio'
   - '+.hanyou.com'
+  - '+.hanyougame.com'
   - '+.hanyouwang.com'
   - '+.hanyucar.com'
   - '+.hanyuehui.site'
@@ -26117,6 +26110,7 @@ payload:
   - '+.haowa.com'
   - '+.haowaicaijing.com'
   - '+.haowandeni.com'
+  - '+.haowanok.com'
   - '+.haowanyou.com'
   - '+.haoweiguang.me'
   - '+.haoweishow.com'
@@ -27600,6 +27594,7 @@ payload:
   - '+.homekingcdn.com'
   - '+.homekoo.com'
   - '+.homekoocdn.com'
+  - '+.homelandol.com'
   - '+.hometeda.com'
   - '+.hometex114.com'
   - '+.hometexjoin.com'
@@ -30584,6 +30579,7 @@ payload:
   - '+.ipku.cc'
   - '+.ipku.com'
   - '+.iplascloud.com'
+  - '+.iplay11g.com'
   - '+.iplaypy.com'
   - '+.iplaysoft.com'
   - '+.ipmay.com'
@@ -32108,6 +32104,7 @@ payload:
   - '+.jindanlicai.com'
   - '+.jindaodao.com'
   - '+.jindianweb.com'
+  - '+.jindidata.com'
   - '+.jindingfm.com'
   - '+.jindun007.net'
   - '+.jindunfan.com'
@@ -33176,7 +33173,6 @@ payload:
   - '+.jtlw.com'
   - '+.jtm.pub'
   - '+.jtnsh.com'
-  - '+.jtnxs.com'
   - '+.jttv.net'
   - '+.jtv123.com'
   - '+.jtyjy.com'
@@ -33365,7 +33361,6 @@ payload:
   - '+.jupup.com'
   - '+.juqi.com'
   - '+.juqingjuqing.com'
-  - '+.juqiwang.net'
   - '+.juren.com'
   - '+.jurenqi.com'
   - '+.jurongfangchan.com'
@@ -33731,6 +33726,7 @@ payload:
   - '+.kafangtech.com'
   - '+.kafka.cc'
   - '+.kagirl.net'
+  - '+.kahao123.com'
   - '+.kai-ying.com'
   - '+.kaiba315.com'
   - '+.kaibo5888.com'
@@ -34023,7 +34019,6 @@ payload:
   - '+.kdatacenter.com'
   - '+.kdbbx.com'
   - '+.kdd.cc'
-  - '+.kddushu.com'
   - '+.kdebell.com'
   - '+.kdfax.com'
   - '+.kdige.com'
@@ -34063,7 +34058,6 @@ payload:
   - '+.keede.com'
   - '+.keenonrobot.com'
   - '+.keensky.com'
-  - '+.keenwon.com'
   - '+.keep.city'
   - '+.keep.com'
   - '+.keepc.com'
@@ -34117,6 +34111,7 @@ payload:
   - '+.kekiss.com'
   - '+.kekoku.com'
   - '+.kele8.com'
+  - '+.kelehuyu.com'
   - '+.kelepi.com'
   - '+.keleqiu.com'
   - '+.keleyi.com'
@@ -35275,7 +35270,6 @@ payload:
   - '+.lakecn.com'
   - '+.lakwdian.com'
   - '+.lalala.lol'
-  - '+.lalashuwu.com'
   - '+.lalkk.com'
   - '+.lalunalove.com'
   - '+.lamabang.com'
@@ -35341,7 +35335,6 @@ payload:
   - '+.langlive.com'
   - '+.langlvseo.com'
   - '+.langmanzg.com'
-  - '+.langmanzw.com'
   - '+.langren001.com'
   - '+.langren8.com'
   - '+.langrencard.com'
@@ -35386,13 +35379,11 @@ payload:
   - '+.lanqiudi.com'
   - '+.lanqiuzu.com'
   - '+.lanreelh.com'
-  - '+.lanren9.com'
   - '+.lanrenbijia.com'
   - '+.lanrenclub.com'
   - '+.lanrenexcel.com'
   - '+.lanrenkaifa.com'
   - '+.lanrenmb.com'
-  - '+.lanrentingshu.cc'
   - '+.lanrentuku.com'
   - '+.lanrenzhaofang.com'
   - '+.lanrenzhijia.com'
@@ -36936,6 +36927,7 @@ payload:
   - '+.lnmp.org'
   - '+.lnok.net'
   - '+.lnpjw.com'
+  - '+.lnqwe.com'
   - '+.lnrcu.com'
   - '+.lnrsks.com'
   - '+.lnsgczb.com'
@@ -37006,6 +36998,7 @@ payload:
   - '+.loho88.com'
   - '+.loj.ac'
   - '+.loji.com'
+  - '+.loke123.com'
   - '+.lokyi.name'
   - '+.lol123.net'
   - '+.lol99.com'
@@ -38191,6 +38184,7 @@ payload:
   - '+.manpianyi.com'
   - '+.manrong.win'
   - '+.manshitea.com'
+  - '+.mantianfei.net'
   - '+.mantusy.com'
   - '+.manwuxian123.com'
   - '+.manxiu-law.com'
@@ -38729,7 +38723,6 @@ payload:
   - '+.meiyixinrui.com'
   - '+.meiyou.com'
   - '+.meiyue.com'
-  - '+.meiyuxiuxiu.com'
   - '+.meizhanggui.cc'
   - '+.meizhejie.com'
   - '+.meizhou.com'
@@ -41115,6 +41108,7 @@ payload:
   - '+.ninjacn.com'
   - '+.ninjadq.com'
   - '+.ninjamustdie.com'
+  - '+.ninthpalace360.com'
   - '+.ninze.com'
   - '+.nio.com'
   - '+.nioapis.com'
@@ -41895,7 +41889,6 @@ payload:
   - '+.okxr.com'
   - '+.okz.com'
   - '+.okz.ltd'
-  - '+.okzuowenxs.com'
   - '+.ol-cdn.com'
   - '+.ol-img.com'
   - '+.ol3vs.com'
@@ -43643,7 +43636,6 @@ payload:
   - '+.ppwan.com'
   - '+.ppwwyyxx.com'
   - '+.ppxclub.com'
-  - '+.ppxhw.com'
   - '+.ppxs.net'
   - '+.ppxwo.com'
   - '+.ppym.xyz'
@@ -44225,7 +44217,6 @@ payload:
   - '+.qhupdate.com'
   - '+.qhwh.com'
   - '+.qhwmw.com'
-  - '+.qhxiaoshuo.com'
   - '+.qhxmlyts.com'
   - '+.qhxyms.com'
   - '+.qhxz.com'
@@ -45892,7 +45883,6 @@ payload:
   - '+.repian.com'
   - '+.repianimg.com'
   - '+.replays.net'
-  - '+.res0w.com'
   - '+.resclassaction.com'
   - '+.resheji.com'
   - '+.resistor.today'
@@ -47113,6 +47103,7 @@ payload:
   - '+.searchforit8.com'
   - '+.searchpstatp.com'
   - '+.searchtb.com'
+  - '+.seaskyapp.com'
   - '+.seasouthgy.com'
   - '+.seassoon.com'
   - '+.seastarasset.com'
@@ -47246,7 +47237,6 @@ payload:
   - '+.sendbp.com'
   - '+.sendcloud.net'
   - '+.sendcloud.org'
-  - '+.sendocn.com'
   - '+.sendong.com'
   - '+.sends.cc'
   - '+.senenwood.com'
@@ -48247,6 +48237,7 @@ payload:
   - '+.shrenqi.com'
   - '+.shrobotpark.com'
   - '+.shryjc.com'
+  - '+.shryou.com'
   - '+.shsaic.net'
   - '+.shsbnu.net'
   - '+.shsby.com'
@@ -49396,6 +49387,7 @@ payload:
   - '+.sojiang.com'
   - '+.sojiang.net'
   - '+.sojianli.com'
+  - '+.sojixun.com'
   - '+.sojson.com'
   - '+.sojump.com'
   - '+.sojump.hk'
@@ -49512,7 +49504,6 @@ payload:
   - '+.sosg.net'
   - '+.soshoo.com'
   - '+.soshoulu.com'
-  - '+.soshuwu.com'
   - '+.sosidc.com'
   - '+.soso.com'
   - '+.sosoapi.com'
@@ -51283,7 +51274,6 @@ payload:
   - '+.taotieren.com'
   - '+.taotiwang.com'
   - '+.taotu8.net'
-  - '+.taotumowang.com'
   - '+.taotuwu.com'
   - '+.taou.com'
   - '+.taowola.com'
@@ -51929,6 +51919,7 @@ payload:
   - '+.tiansin.com'
   - '+.tiantailaw.com'
   - '+.tiantang6.com'
+  - '+.tiantaxx.com'
   - '+.tianti.com'
   - '+.tiantian.com'
   - '+.tiantiancaipu.com'
@@ -52437,6 +52428,7 @@ payload:
   - '+.tongpankt.com'
   - '+.tongshanbank.com'
   - '+.tongshuai.com'
+  - '+.tongtaiamc.com'
   - '+.tongtech.com'
   - '+.tongtianta.site'
   - '+.tongtongli.com'
@@ -53422,6 +53414,7 @@ payload:
   - '+.tytuyoo.com'
   - '+.tytywuliu.com'
   - '+.tytzzy.com'
+  - '+.tyu89.wang'
   - '+.tyueo.com'
   - '+.tyust.net'
   - '+.tyuyan.com'
@@ -54859,7 +54852,6 @@ payload:
   - '+.vv881.com'
   - '+.vv8yx.com'
   - '+.vv91.com'
-  - '+.vv9vv.com'
   - '+.vvaii.com'
   - '+.vvbtc.com'
   - '+.vvddcc.com'
@@ -55419,6 +55411,7 @@ payload:
   - '+.wdfxw.net'
   - '+.wdghy.com'
   - '+.wdinter.com'
+  - '+.wdiyi.com'
   - '+.wdjimg.com'
   - '+.wdjky.com'
   - '+.wdjl.net'
@@ -55585,6 +55578,7 @@ payload:
   - '+.wefans.com'
   - '+.wefiler.com'
   - '+.wefinger.club'
+  - '+.wefunol.com'
   - '+.wegame.com'
   - '+.wegamex.com.hk'
   - '+.wegene.com'
@@ -55686,6 +55680,8 @@ payload:
   - '+.weilanliuxue.com'
   - '+.weile.com'
   - '+.weileapp.com'
+  - '+.weilekuiming.com'
+  - '+.weileryiyt.com'
   - '+.weiling520.com'
   - '+.weilingdi.com'
   - '+.weilinovel.net'
@@ -56907,6 +56903,7 @@ payload:
   - '+.wondershare.net'
   - '+.wondersmemory.com'
   - '+.wonderstar027.com'
+  - '+.wonderyouxi.com'
   - '+.wonei.com'
   - '+.wonerqu.com'
   - '+.wongcw.com'
@@ -57043,6 +57040,7 @@ payload:
   - '+.woyouche.com'
   - '+.woyouquan.net'
   - '+.wozaijia.com'
+  - '+.wozhangwan.com'
   - '+.wozhua.mobi'
   - '+.wozhuan.com'
   - '+.wozhuye.com'
@@ -57250,7 +57248,6 @@ payload:
   - '+.wudao.com'
   - '+.wudaotv.com'
   - '+.wudku.com'
-  - '+.wudusw.com'
   - '+.wueasy.com'
   - '+.wuerys.com'
   - '+.wufafuwu.com'
@@ -58137,6 +58134,7 @@ payload:
   - '+.xhsyww.com'
   - '+.xht.com.hk'
   - '+.xhtd291.com'
+  - '+.xhungame.com'
   - '+.xhuojia.com'
   - '+.xhup.club'
   - '+.xhwhouse.com'
@@ -59930,6 +59928,7 @@ payload:
   - '+.xunfang.com'
   - '+.xunfeivr.com'
   - '+.xungou.com'
+  - '+.xunguanggame.com'
   - '+.xunhuoyi.com'
   - '+.xunhupay.com'
   - '+.xunicard.com'
@@ -59954,6 +59953,7 @@ payload:
   - '+.xunlong.tv'
   - '+.xunlonghe.net'
   - '+.xunlongsoft.com'
+  - '+.xunlugame.com'
   - '+.xunmb.com'
   - '+.xunmei.net'
   - '+.xunmeinet.com'
@@ -60271,7 +60271,6 @@ payload:
   - '+.xzw.com'
   - '+.xzwwxn.com'
   - '+.xzx.com'
-  - '+.xzxiaoshuo.com'
   - '+.xzxw.com'
   - '+.xzyhealth.com'
   - '+.xzzanggong.com'
@@ -60397,7 +60396,6 @@ payload:
   - '+.yangqu.com'
   - '+.yangsam.com'
   - '+.yangshengliang.com'
-  - '+.yangshengpu.com'
   - '+.yangshengtt.com'
   - '+.yangshitianqi.com'
   - '+.yangtaiapp.com'
@@ -60442,7 +60440,6 @@ payload:
   - '+.yanjun7858.com'
   - '+.yanjunbo.com'
   - '+.yankanshu.net'
-  - '+.yankanzw.com'
   - '+.yankay.com'
   - '+.yanliu.org'
   - '+.yanlutong.com'
@@ -60451,7 +60448,6 @@ payload:
   - '+.yanoda.com'
   - '+.yanpk.com'
   - '+.yanqiao.com'
-  - '+.yanqing-888.net'
   - '+.yanqingzhan.net'
   - '+.yansedaquan.com'
   - '+.yanshihua.com'
@@ -60484,7 +60480,6 @@ payload:
   - '+.yao51.com'
   - '+.yaoao.net'
   - '+.yaobo.net'
-  - '+.yaochixs.com'
   - '+.yaochufa.com'
   - '+.yaocsoft.com'
   - '+.yaodou.net'
@@ -61200,6 +61195,7 @@ payload:
   - '+.yingmile.com'
   - '+.yingming.net'
   - '+.yingmoo.com'
+  - '+.yingpaigame.com'
   - '+.yingshe.com'
   - '+.yingsheng.com'
   - '+.yingshengyl.com'
@@ -61422,6 +61418,7 @@ payload:
   - '+.yixi.tv'
   - '+.yixia.com'
   - '+.yixiaoxi.com'
+  - '+.yixiaozu.com'
   - '+.yixie8.com'
   - '+.yixiekeji.com'
   - '+.yixieshi.com'
@@ -61904,6 +61901,7 @@ payload:
   - '+.yougababy.com'
   - '+.youganghangmoguan.com'
   - '+.yougaoji.com'
+  - '+.yougaoyx.com'
   - '+.yougequn.com'
   - '+.yougou.com'
   - '+.yougou357.com'
@@ -62208,7 +62206,6 @@ payload:
   - '+.ypppt.com'
   - '+.ypshengxian.com'
   - '+.ypstech.com'
-  - '+.ypxiaoshuo.com'
   - '+.ypzdw.com'
   - '+.ypzhushou.com'
   - '+.yq027.com'
@@ -62286,7 +62283,6 @@ payload:
   - '+.ysgushi.com'
   - '+.yshp.net'
   - '+.yshsports.com'
-  - '+.yshuoba.com'
   - '+.yshyqxx.com'
   - '+.ysicing.me'
   - '+.ysicing.net'
@@ -63118,6 +63114,7 @@ payload:
   - '+.yyk100.com'
   - '+.yyk2.com'
   - '+.yykepu.com'
+  - '+.yykj.site'
   - '+.yylending.com'
   - '+.yylm.org'
   - '+.yymedias.com'
@@ -64895,7 +64892,6 @@ payload:
   - '+.ziyan666.com'
   - '+.ziyawang.com'
   - '+.ziye114.com'
-  - '+.ziyesy.com'
   - '+.ziyexing.com'
   - '+.ziyimall.com'
   - '+.ziyou.com'
