--- a/directbak.yaml
+++ b/directbak.yaml
@@ -7439,6 +7439,7 @@ payload:
   - '+.ab95569.com'
   - '+.abab.com'
   - '+.abacaipu.com'
+  - '+.abakua.com'
   - '+.abang.com'
   - '+.abardeen-online.com'
   - '+.abbooa.com'
@@ -16551,6 +16552,7 @@ payload:
   - '+.coship.com'
   - '+.cosize.com'
   - '+.cosmoplat.com'
+  - '+.cosmos-21.com'
   - '+.cosoar.com'
   - '+.cosplay8.com'
   - '+.cosplayla.com'
@@ -19361,6 +19363,7 @@ payload:
   - '+.dongxuyitai.com'
   - '+.dongyaods.com'
   - '+.dongyin.net'
+  - '+.dongyun.biz'
   - '+.dongzhougroup.com'
   - '+.dongzhuoyao.com'
   - '+.donhonet.net'
@@ -25274,6 +25277,7 @@ payload:
   - '+.gycode.com'
   - '+.gydongli.com'
   - '+.gyersf.com'
+  - '+.gygl.com'
   - '+.gyguohua.com'
   - '+.gyhj.org'
   - '+.gyip.net'
@@ -29191,6 +29195,7 @@ payload:
   - '+.iamjzs.com'
   - '+.iamle.com'
   - '+.iamlintao.com'
+  - '+.iamnow.net'
   - '+.iamshuaidi.com'
   - '+.iamsujie.com'
   - '+.iamtxt.com'
@@ -32603,6 +32608,7 @@ payload:
   - '+.jkgood.com'
   - '+.jkidc.com'
   - '+.jkimg.net'
+  - '+.jkjkjiankang.com'
   - '+.jkjzt.com'
   - '+.jkpan.cc'
   - '+.jkpj.com'
@@ -37440,6 +37446,7 @@ payload:
   - '+.lunar2013.com'
   - '+.lunchong.com'
   - '+.lundao.pub'
+  - '+.luneciel.com'
   - '+.lunkuokeji.com'
   - '+.lunwenchachong.org'
   - '+.lunwendj.com'
@@ -55225,7 +55232,6 @@ payload:
   - '+.wanshifu.com'
   - '+.wanshitong.com'
   - '+.wanshouyou.net'
-  - '+.wanshutech.com'
   - '+.wanshuyun.com'
   - '+.wansongpu.com'
   - '+.wantattoo.com'
@@ -58790,7 +58796,6 @@ payload:
   - '+.xindingwealth.com'
   - '+.xindns.com'
   - '+.xindns.mobi'
-  - '+.xindon.com'
   - '+.xindong.com'
   - '+.xinduihuan.com'
   - '+.xinduo.com'
@@ -59650,6 +59655,7 @@ payload:
   - '+.xsstomy.com'
   - '+.xssz.net'
   - '+.xsteach.com'
+  - '+.xsthmy.com'
   - '+.xsti.net'
   - '+.xstqj.com'
   - '+.xstt5.com'
@@ -60061,6 +60067,7 @@ payload:
   - '+.xxsywxj.com'
   - '+.xxtaotao.com'
   - '+.xxtiao.com'
+  - '+.xxtswzedu.com'
   - '+.xxwenda.com'
   - '+.xxwolo.com'
   - '+.xxxfeng.com'
@@ -65716,7 +65723,6 @@ payload:
   - '+.zxdb999.com'
   - '+.zxdoo.com'
   - '+.zxdu.net'
-  - '+.zxdyo.com'
   - '+.zxdyw.com'
   - '+.zxe-china.com'
   - '+.zxerp.com'
